#1: Package information added

--- a/package.json
+++ b/package.json
@@ -1,9 +1,19 @@
 {
-  "name": "uplcamera",
+  "name": "react-native-cam-gallery",
   "version": "0.0.1",
   "description": "React Native Whatsapp Camera and Gallery for iOS & Android",
-  "private": true,
+  "homepage": "https://github.com/uplsourav/react-native-cam-gallery#readme",
   "main": "index.js",
+  "keywords": [
+    "react-native",
+    "react native",
+    "Whastapp gallery",
+    "camera",
+    "photo gallery"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/uplsourav/react-native-cam-gallery.git"},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
