--- a/example/package.json
+++ b/example/package.json
@@ -13,7 +13,7 @@
     "@react-native-community/cameraroll": "^4.1.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-camera": "uplsoumen/react-native-camera-modified#master",
+    "react-native-camera-kit": "12.1.0",
     "react-native-permissions": "^3.3.1",
     "react-native-cam-gallery": "../"
   },
