--- a/example/package.json
+++ b/example/package.json
@@ -10,11 +10,12 @@
     "lint": "eslint ."
   },
   "dependencies": {
-    "@react-native-community/cameraroll": "^4.1.2",
     "react": "17.0.2",
     "react-native": "0.68.2",
-    "react-native-camera-kit": "12.1.0",
+    "@react-native-community/cameraroll": "^4.1.2",
+    "react-native-camera-kit": "^12.1.0",
     "react-native-permissions": "^3.3.1",
+    "fbjs": "^3.0.4",
     "react-native-cam-gallery": "../"
   },
   "devDependencies": {
