--- a/package.json
+++ b/package.json
@@ -16,16 +16,13 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "dependencies": {
-    "fbjs": "^3.0.4",
+  "peerDependencies": {
     "react": "17.0.2",
     "react-native": "0.68.0",
-    "react-native-super-grid": "^4.2.0"
-  },
-  "peerDependencies": {
     "@react-native-community/cameraroll": "^4.1.2",
-    "react-native-camera-kit": "*/*",
-    "react-native-permissions": "^3.3.1"
+    "react-native-camera-kit": "^12.1.0",
+    "react-native-permissions": "^3.3.1",
+    "fbjs": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
